--- a/admin/templates/admin/listposts.html
+++ b/admin/templates/admin/listposts.html
@@ -12,3 +12,6 @@
     {%endfor%}
 </ul>
 {%endblock%}
+
+C:\Users\13076\OneDrive\Документи\Python_lessons\Flask_lessons\SelfEduTutorials
+C:\Users\13076\OneDrive\Документи\Python_lessons\Flask_lessons\SelfEduTutorials
